--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,6 +3,7 @@
 <% @posts.each do |post| %>
 	<%= render :partial=>post%>    
     <%= link_to 'Edit', edit_post_path(post)%>
+    <%= link_to 'view', view_post_path(post)%>
     <%= link_to 'Destroy', post, confirm: 'Are you sure?', method: :delete %>
 <% end %>
 
