--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Recent posts</h1>
 
-<% @posts.each do |post| %>
+<%  @posts.each do |post| %>
 	<%= render :partial=>post%>    
     <%= link_to 'Edit', edit_post_path(post)%>
     <%= link_to 'view', view_post_path(post)%>
@@ -11,4 +11,5 @@
 
 <%= link_to 'New Post', new_post_path %>
 
-
+<!--分页-->
+<%= paginate @posts %>
